--- a/Engine/ColorVision.Engine/Services/Devices/Camera/Views/ViewCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/Views/ViewCamera.xaml
@@ -79,7 +79,7 @@
             </StackPanel>
 
 
-            <ListView  x:Name="listView1" Height="200" Visibility="{Binding Config.IsShowListView, Converter={StaticResource bool2VisibilityConverter}}" Grid.Row="1"   BorderThickness="0" Padding="0" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" Grid.RowSpan="2" >
+            <ListView  x:Name="listView1" Height="{Binding Config.Height}"  Visibility="{Binding Config.IsShowListView, Converter={StaticResource bool2VisibilityConverter}}" Grid.Row="1"   BorderThickness="0" Padding="0" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" Grid.RowSpan="2" >
                 <ListView.Resources >
                     <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" />
                 </ListView.Resources>
