--- a/Engine/ColorVision.Engine/Services/Devices/Algorithm/Views/AlgorithmView.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Algorithm/Views/AlgorithmView.xaml
@@ -120,7 +120,7 @@
 
 
 
-                <ListView Grid.Row="1" x:Name="listView1" Height="200" Visibility="{Binding Config.IsShowListView, Converter={StaticResource bool2VisibilityConverter}}"  BorderThickness="0"  Padding="0" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" >
+                <ListView Grid.Row="1" x:Name="listView1" Height="{Binding Config.Height}" Visibility="{Binding Config.IsShowListView, Converter={StaticResource bool2VisibilityConverter}}"  BorderThickness="0"  Padding="0" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" >
                     <ListView.Resources >
                         <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" />
                     </ListView.Resources>
