--- a/Projects/ProjectKB/ProjectKBWindow.xaml
+++ b/Projects/ProjectKB/ProjectKBWindow.xaml
@@ -86,7 +86,8 @@
                     <Grid Visibility="Visible" >
                         <ToolBarTray  Grid.Row="0" IsLocked="True">
                             <ToolBar Padding="3,2">
-                                <Button x:Name="Search" Content="查询" Command="{Binding ViewResultManager.QueryCommand}" Margin="2,0,0,0"/>
+                                <Button  Content="查询" Command="{Binding ViewResultManager.QueryCommand}" Margin="2,0,0,0"/>
+                                <Button  Content="通用查询" Command="{Binding ViewResultManager.GenericQueryCommand}" Margin="2,0,0,0"/>
                             </ToolBar>
                         </ToolBarTray>
                         <StackPanel HorizontalAlignment="Right"  Orientation="Horizontal">
@@ -353,6 +354,9 @@
             </StatusBarItem>
             <StatusBarItem>
                 <Button Content="Test" Click="Button_Click"/>
+            </StatusBarItem>
+            <StatusBarItem>
+                <Button Content="TestDB" Click="Button_Click_1"/>
             </StatusBarItem>
             <StatusBarItem>
                 <Button Content="更新记录" Command="{Binding OpenChangeLogCommand}"/>
