--- a/Engine/ColorVision.Engine/Services/Devices/Calibration/Views/ViewCalibration.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Calibration/Views/ViewCalibration.xaml
@@ -11,6 +11,7 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:hc="https://handyorg.github.io/handycontrol" 
              mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance local:ViewCalibrationConfig}"
              d:DesignHeight="450" d:DesignWidth="800" Background="{DynamicResource BorderBrush}" Initialized="UserControl_Initialized">
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}">
@@ -33,7 +34,7 @@
             </Grid.RowDefinitions>
             <ToolBarTray  Grid.Row="0" IsLocked="True" >
                 <ToolBar Band="0" BandIndex="0" Padding="3,2" Margin="0,0,2,0">
-                    <ToggleButton  Style="{StaticResource ToggleButtonSwitch}" Margin="0,0,2,0"  IsChecked="{Binding Config.IsShowListView, Converter={StaticResource Boolean2BooleanReConverter}}"/>
+                    <ToggleButton  Style="{StaticResource ToggleButtonSwitch}" Margin="0,0,2,0"  IsChecked="{Binding IsShowListView, Converter={StaticResource Boolean2BooleanReConverter}}"/>
                     <Button Content="{x:Static properties:Resources.Inquire}" Click="SearchAdvanced_Click" Margin="0,0,2,0"/>
                     <Button x:Name="Search" Content="{x:Static properties:Resources.AdvanceSearch}" Click="Search1_Click" Margin="0,0,2,0"/>
                 </ToolBar>
@@ -42,7 +43,7 @@
                 <Button Click="Button_Click" Padding="2" Height="25" Width="25" Margin="0,1,5,0">
                     <Rectangle Width="16" Height="16" Fill="{StaticResource DISave}" />
                 </Button>
-                <Button  Command="{Binding Config.ClearListCommand}" Padding="2" Height="25" Width="25">
+                <Button  Command="{Binding ClearListCommand}" Padding="2" Height="25" Width="25">
                     <Button.Triggers>
                         <EventTrigger RoutedEvent="Button.Click">
                             <BeginStoryboard>
@@ -59,7 +60,7 @@
                         </Image.RenderTransform>
                     </Image>
                 </Button>
-                <Button Grid.Column="1" Margin="5,1,5,0" HorizontalAlignment="Left" Command="{Binding Config.EditCommand}" Padding="2" Height="25" Width="25" >
+                <Button Grid.Column="1" Margin="5,1,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25" >
                     <Button.Triggers>
                         <EventTrigger RoutedEvent="Button.Click">
                             <BeginStoryboard>
@@ -76,7 +77,7 @@
                     </TextBlock>
                 </Button>
             </StackPanel>
-            <ListView Grid.Row="1" x:Name="listView1" BorderThickness="0" Padding="0" Height="{Binding Config.Height}"  Visibility="{Binding Config.IsShowListView, Converter={StaticResource bool2VisibilityConverter}}" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" >
+            <ListView Grid.Row="1" x:Name="listView1" BorderThickness="0" Padding="0" Height="{Binding Height}"  Visibility="{Binding IsShowListView, Converter={StaticResource bool2VisibilityConverter}}" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" >
                 <ListView.Resources >
                     <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" />
                 </ListView.Resources>
