--- a/Engine/ColorVision.Engine/Pattern/PatternWindow.xaml
+++ b/Engine/ColorVision.Engine/Pattern/PatternWindow.xaml
@@ -12,41 +12,46 @@
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="5">
-            <ComboBox x:Name="cmbResolution"  Margin="0,0,0,5"/>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBox x:Name="txtWidth" Width="100" Text="{Binding Width}" Margin="0,0,5,0"/>
-                <TextBox x:Name="txtHeight" Width="100" Text="{Binding Height}" Margin="0,0,5,0"/>
+        <ScrollViewer>
+            <StackPanel Margin="5">
+                <ComboBox x:Name="cmbResolution"  Margin="0,0,0,5"/>
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                    <TextBox x:Name="txtWidth" Width="100" Text="{Binding Width}" Margin="0,0,5,0"/>
+                    <TextBox x:Name="txtHeight" Width="100" Text="{Binding Height}" Margin="0,0,5,0"/>
+                </StackPanel>
+                <DockPanel  Margin="0,0,0,5">
+                    <Button DockPanel.Dock="Right" Grid.Column="1" Margin="5,0,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25"  Click="Button_Click">
+                        <Button.Triggers>
+                            <EventTrigger RoutedEvent="Button.Click">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Button.Triggers>
+                        <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
+                            <TextBlock.RenderTransform>
+                                <RotateTransform x:Name="rotateTransform2"/>
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                    </Button>
+
+                    <ComboBox x:Name="cmbPattern1" DisplayMemberPath="Name"/>
+
+                </DockPanel>
+                <Grid x:Name="PatternEditorGrid">
+
+                </Grid>
+                <Button Content="生成" Click="PatternGen_Click" Margin="0,0,0,10"/>
+
+                <ComboBox x:Name="cmbFormat"  Margin="0,0,0,5"/>
+                <Button Content="保存" Click="BtnSave_Click"/>
+                <Button Content="保存成模板" Click="TempSave_Click"/>
+                <Button Content="加载模板" Click="TempLoad_Click"/>
             </StackPanel>
-            <DockPanel  Margin="0,0,0,5">
-                <Button DockPanel.Dock="Right" Grid.Column="1" Margin="5,0,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25"  Click="Button_Click">
-                    <Button.Triggers>
-                        <EventTrigger RoutedEvent="Button.Click">
-                            <BeginStoryboard>
-                                <Storyboard>
-                                    <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                    </Button.Triggers>
-                    <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
-                        <TextBlock.RenderTransform>
-                            <RotateTransform x:Name="rotateTransform2"/>
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
-                </Button>
+        </ScrollViewer>
 
-                <ComboBox x:Name="cmbPattern1" DisplayMemberPath="Name"/>
-    
-            </DockPanel>
-            <Grid x:Name="PatternEditorGrid">
-                
-            </Grid>
-            <Button Content="生成" Click="PatternGen_Click" Margin="0,0,0,10"/>
-
-            <ComboBox x:Name="cmbFormat"  Margin="0,0,0,5"/>
-            <Button Content="保存" Click="BtnSave_Click"/>
-        </StackPanel>
         <Grid x:Name="DisplayGrid" Grid.Column="1">
             
         </Grid>
