--- a/Engine/ColorVision.Engine/Pattern/PatternWindow.xaml
+++ b/Engine/ColorVision.Engine/Pattern/PatternWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:ColorVision.Engine.Pattern"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:PatternManager}"
-        Title="图卡生成工具" Height="600" Width="1000" Initialized="Window_Initialized">
+        Title="图卡生成工具" Height="600" Width="1000" Background="{DynamicResource GlobalBackground}" WindowStartupLocation="CenterOwner"  Initialized="Window_Initialized">
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBox.Small}"/>
+        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockBaseStyle}"/>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -19,6 +23,9 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel>
+                <Button Content="打开文件夹" Command="{Binding OpenPatternPathCommand}"/>
+                <Button Content="输出文件夹" Command="{Binding OpenSaveFilePathCommand}"/>
+
                 <Button Content="保存成模板" Click="TempSave_Click"/>
                 <Button Content="生成所有模板图片" Click="GenAllTemplate_Click"/>
                 <Button Grid.Column="1" Margin="0,1,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25" >
@@ -55,8 +62,13 @@
                         </GridView.ColumnHeaderContainerStyle>
                         <GridViewColumn Header="文件名">
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Name}"/>
+                                <DataTemplate DataType="{x:Type local:TemplatePatternFile}">
+                                    <DockPanel Height="20">
+                                        <Grid VerticalAlignment="Center">
+                                            <TextBlock Text="{Binding Name}" Visibility="{Binding IsEditMode,Converter={StaticResource bool2VisibilityConverter1}}" Padding="6,0"/>
+                                            <TextBox  Text="{Binding Name}" LostFocus="TextBox_LostFocus" Tag="{Binding .}" Padding="6,0,6,0" HorizontalAlignment="Left" Visibility="{Binding IsEditMode,Converter={StaticResource bool2VisibilityConverter}}"/>
+                                        </Grid>
+                                    </DockPanel>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
