--- a/UI/ColorVision.Database/GenericQueryWindow.xaml
+++ b/UI/ColorVision.Database/GenericQueryWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.GenericQueryWindow"
+﻿<Window x:Class="ColorVision.Database.GenericQueryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine"
+        xmlns:local="clr-namespace:ColorVision.Database"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:GenericQueryBase}"
         Title="GenericQueryWindow" Height="450" Width="600" Background="{StaticResource GlobalBackground}" Initialized="Window_Initialized">
