--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
@@ -589,7 +589,7 @@
                                     <TextBox Text="{Binding Attribute.Rect,StringFormat={}{0:F0}}" Width="200" Margin="5,0"/>
                                 </StackPanel>
                             </DataTemplate>
-                            <DataTemplate DataType="{x:Type local:PoiPointParam}">
+                            <DataTemplate DataType="{x:Type local:KBPoiVMParam}">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Width="80" Text="{Binding HaloOutMOVE}" Margin="0,0,5,0" PreviewKeyDown="TextBox_PreviewKeyDown"/>
                                     <TextBox Width="80" Text="{Binding HaloThreadV}" Margin="0,0,5,0" PreviewKeyDown="TextBox_PreviewKeyDown"/>
